feat(model): update the Message structure
