# src/server/api/go/docs/swagger.yaml
@@ -106,6 +106,10 @@ definitions:
         items:
           $ref: '#/definitions/model.Asset'
         type: array
+      children:
+        items:
+          $ref: '#/definitions/model.Message'
+        type: array
       created_at:
         type: string
       id:
@@ -115,6 +119,8 @@ definitions:
         items:
           $ref: '#/definitions/model.MessageAsset'
         type: array
+      parent:
+        $ref: '#/definitions/model.Message'
       parent_id:
         type: string
       parts:
